fix:add overflow scroll

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -224,5 +224,6 @@
   }
   body {
     @apply bg-background text-foreground;
+    overflow-y: scroll;
   }
 }
